--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,9 @@ system virtualization, and a deep interest in the information security field. I 
 degree in cybersecurity and defense with high honors, highlighting my commitment and curiosity in the
 information security field.</p>
     <h3>Education</h3>
-    <p><b>Illinois Institute of Chicago, Illinois</b></p>
+    <p><strong>Illinois Institute of Chicago, Illinois</strong></p>
     <p>Bachelor of Information Technology and Management, Aug. 2021 - May 2024</p>
-    <p><b>College of DuPage, Glen Ellyn, Illinois - 3.72 GPA</b></p>
+    <p><strong>College of DuPage, Glen Ellyn, Illinois - 3.72 GPA</strong></p>
     <p>Associate of Applied Science in Cybersecurity and Defense, Aug. 2019 - May 2021</p>
     <p>Focus on network configuration as well as computer law and defensive and offensive network techniques.</p>
     <h3>Skills</h3>
@@ -41,30 +41,30 @@ information security field.</p>
       <li>Computer forensics</li>
     </ul>
     <h3>Relevant Coursework</h3>
-    <p><b>Routing and Switching (CCNA)</b></p>
+    <p><strong>Routing and Switching (CCNA)</strong></p>
     <ul>
       <li>Using Cisco 2960-series switches and 2800-series routers, established and configured VLANs, Spanning Tree
 Protocol, Open Shortest Path First, DNS, DHCP, EtherChannel, PAgP, LACP.</li>
       <li>OSI model, IP/TCP concepts, MAC and physical layers.</li>
     </ul>
-    <p><b>Enterprise Security and Ethical Hacking</b></p>
+    <p><strong>Enterprise Security and Ethical Hacking</strong></p>
     <ul>
       <li>Configured firewalls, IPS/IDS systems, ASAs, ACLs, operation logs, NTP, SSH</li>
       <li>Completed projects such as gaining full access to a system using Metasploit, cracking encrypted
 messages, performing DOS attacks.</li>
     </ul>
-    <p><b>Linux Server Configuration</b></p>
+    <p><strong>Linux Server Configuration</strong></p>
     <ul>
       <li>Created users, assigned passwords, traversed the filesystem, used command line text editors,
 various command line configurations, created cronjobs and monitor system logs.</li>
     </ul>
-    <p><b>Windows Server Configuration</b></p>
+    <p><strong>Windows Server Configuration</strong></p>
     <ul>
       <li>Configured Active Directory networks with virtual machines on my personal computer.</li>
       <li>Created domains and forests, DNS, DHCP, file sharing services, organizational units and containers,
 secure application authorization, EFS and data recovery agents.</li>
     </ul>
-    <p><b>Personal Projects</b></p>
+    <p><strong>Personal Projects</strong></p>
     <ul>
       <li>Orchestrated personal virtual machines to explore topics learned in class such as network intrusion tactics.</li>
       <li>Programming projects in C++, C, Java, JavaScript, and Python.</li>
