--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
   <title>Home</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 <body>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="hobbies.html">Hobbies</a></li>
-    <li><a href="pets.html">Pets</a></li>
-  </ul>
+  <header>
+    <nav id="main-navbar">
+      <div id="navbar-container">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
+          <li><a href="pets.html">Pets</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
   <p>Enjoy this video of a man with natural autotune</p>
   <video controls="controls">
     <source src="images/natual_autotune.mp4" type="video/mp4">
