--- a/pets.html
+++ b/pets.html
@@ -13,11 +13,13 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
-          <li><a href="pets.html">Pets</a></li>
+          <li id="onpage"><a href="pets.html">Pets</a></li>
         </ul>
       </div>
     </nav>
   </header>
+  <h1>Pets</h1>
+  <hr id="resume_divider" />
   <p>I have one dog named Baylee and one cat named Ollie. Ollie is an orange cat, I have no clue what the breed is. Baylee is a bassador, a mix between a labrador and a beagle. Ollie is just under 1 year old and Baylee is 5 and a half. Enjoy the following images.</p>
   <p></p>
   <p>Ollie likes to stand on random things, such as the banister over the stairs or on the dumbbells as pictured here.</p>
