--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
       <div id="navbar-container">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <li id="onpage"><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="pets.html">Pets</a></li>
         </ul>
@@ -20,6 +20,7 @@
   </header>
   <section>
     <h1>Resume</h1>
+    <hr id="resume_divider">
     <h2>Jacob Holtz</h2>
     <p>Chicago, IL, 60616</p>
     <p>jholtz1@hawk.iit.edu</p>
