--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav id="main-navbar">
       <div id="navbar-container">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li id="onpage_home"><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="pets.html">Pets</a></li>
@@ -18,6 +18,8 @@
       </div>
     </nav>
   </header>
+  <h1>Home</h1>
+  <hr id="resume_divider" />
   <p>Enjoy this video of a man with natural autotune</p>
   <video controls="controls">
     <source src="images/natual_autotune.mp4" type="video/mp4">
