--- a/hobbies.html
+++ b/hobbies.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li id="onpage"><a href="hobbies.html">Hobbies</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="pets.html">Pets</a></li>
         </ul>
       </div>
