--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav id="main-navbar">
       <div id="navbar-container">
         <ul>
-          <li id="onpage_home"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="pets.html">Pets</a></li>
