--- a/pets.html
+++ b/pets.html
@@ -13,7 +13,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
-          <li id="onpage"><a href="pets.html">Pets</a></li>
+          <li><a href="pets.html">Pets</a></li>
         </ul>
       </div>
     </nav>
