--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
       <div id="navbar-container">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li id="onpage"><a href="resume.html">Resume</a></li>
+          <li><a href="resume.html">Resume</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
           <li><a href="pets.html">Pets</a></li>
         </ul>
