--- a/pets.html
+++ b/pets.html
@@ -20,17 +20,20 @@
   </header>
   <h1>Pets</h1>
   <hr id="resume_divider" />
+  
   <p>I have one dog named Baylee and one cat named Ollie. Ollie is an orange cat, I have no clue what the breed is. Baylee is a bassador, a mix between a labrador and a beagle. Ollie is just under 1 year old and Baylee is 5 and a half. Enjoy the following images.</p>
-  <p></p>
   <p>Ollie likes to stand on random things, such as the banister over the stairs or on the dumbbells as pictured here.</p>
-  <img src="images/ollie1.jpg" alt="ollie 1">
-  <p>Anyone who owns a cat knows about the loaf or rotisserie position, where they tuck in their legs and tail.</p>
-  <img src="images/ollie2.jpg" alt="ollie 2">
-  <p>Ollie in his bed on the cat stand.</p>
-  <img src="images/ollie3.jpg" alt="ollie 3">
-  <p>Ollie and Baylee in a picture together. Baylee is sometimes mean to Ollie and likes to chase him around but it usally doesn't last more than a few seconds. Most of the time they get along.</p>
-  <img src="images/o+b.jpg" alt="ollie and baylee">
-  <p>Here is Baylee crunched in the bathroom next to the bathtub. You can almost always find her on a floor vent here or in the foyer since she loves the warm air. But I still can't figure out how she finds this comfortable. Maybe it's because she is so fat, her neck rolls act as a pillow.</p>
-  <img src="images/fattest_dog_known_to_man.jpg" alt="fat dog">
+  <div id="pet_images">
+    <img src="images/ollie1.jpg" alt="ollie 1">
+    <img id="img_right" src="images/ollie2.jpg" alt="ollie 2">
+    <p id="text-right">Anyone who owns a cat knows about the loaf or rotisserie position, where they tuck in their legs and tail.</p>
+    <p>Ollie in his bed on the cat stand.</p>
+    <img src="images/ollie3.jpg" alt="ollie 3">
+    <img id="img_right" src="images/o+b.jpg" alt="ollie and baylee">
+    <p id="text-right">Ollie and Baylee in a picture together. Baylee is sometimes mean to Ollie and likes to chase him around but it usally doesn't last more than a few seconds. Most of the time they get along.</p>
+    <img src="images/fattest_dog_known_to_man.jpg" alt="fat dog">
+    <p>Here is Baylee crunched in the bathroom next to the bathtub. You can almost always find her on a floor vent here or in the foyer since she loves the warm air. But I still can't figure out how she finds this comfortable. Maybe it's because she is so fat, her neck rolls act as a pillow.</p>
+    
+  </div>
 </body>
 </html>
