--- a/pets.html
+++ b/pets.html
@@ -29,8 +29,8 @@
     <p id="text-right">Anyone who owns a cat knows about the loaf or rotisserie position, where they tuck in their legs and tail.</p>
     <p>Ollie in his bed on the cat stand.</p>
     <img src="images/ollie3.jpg" alt="ollie 3">
-    <img id="img_right" src="images/o+b.jpg" alt="ollie and baylee">
-    <p id="text-right">Ollie and Baylee in a picture together. Baylee is sometimes mean to Ollie and likes to chase him around but it usally doesn't last more than a few seconds. Most of the time they get along.</p>
+    <img id="i_right" src="images/o+b.jpg" alt="ollie and baylee">
+    <p id="t_right">Ollie and Baylee in a picture together. Baylee is sometimes mean to Ollie and likes to chase him around but it usally doesn't last more than a few seconds. Most of the time they get along.</p>
     <img src="images/fattest_dog_known_to_man.jpg" alt="fat dog">
     <p>Here is Baylee crunched in the bathroom next to the bathtub. You can almost always find her on a floor vent here or in the foyer since she loves the warm air. But I still can't figure out how she finds this comfortable. Maybe it's because she is so fat, her neck rolls act as a pillow.</p>
     
