--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <meta charset="utf-8">
 </head>
 <body>
   <header>
